<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_common"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/fl_tips_password_weak"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:orientation="vertical"
            android:visibility="visible"
            tools:visibility="visible">

            <ImageView
                android:id="@+id/iv_tips"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                tools:src="@drawable/ico_password_tip_warning" />

            <TextView
                android:id="@+id/tv_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginTop="@dimen/normal_padding"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:textColor="@color/text_strong"
                android:textSize="28sp"
                tools:text="@string/wallet_create_password_weak_label" />

            <TextView
                android:id="@+id/tv_tips"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:gravity="center"
                android:textColor="@color/text_strong"
                android:textSize="14sp"
                tools:text="@string/wallet_create_password_weak_tips" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="24dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_bottom_first"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="@dimen/normal_padding"
                android:background="@drawable/bg_orange_radius_6"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="16sp"
                tools:text="@string/wallet_backup" />

            <TextView
                android:id="@+id/tv_bottom_second"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/bg_theme_black_radius_6"
                android:gravity="center"
                android:textColor="@color/text_strong"
                android:textSize="16sp"
                tools:text="@string/wallet_backup_later" />
        </LinearLayout>
    </FrameLayout>
</layout>